# hz-monitor

./: .gitignore  CMakeLists.txt  README.md  cpu_ram_sampler.hpp  gpu_sampler.hpp  hart_sampler.hpp  main.cc  ram_sampler.hpp  resource_monitor.hpp  setup.sh
scripts/: make_pdf_report.py
